{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 46,
  "lineage": "6e2966e7-1946-3437-2de2-ef1bf1234557",
  "resources": [
    {
      "module": "module.ec2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:094175769936:instance/i-0f4ffb282d1a826a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4ffb282d1a826a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keyu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c00232b18d788310",
            "private_dns": "ip-192-168-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.7",
            "public_ip": "44.213.120.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af97a8e1520672cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01cf1cb5eae2ac1a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc19509505d56e2",
            "tags": {
              "Name": "my-ec2"
            },
            "tags_all": {
              "Name": "my-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cf1cb5eae2ac1a3"
            ]
          },
          "dependencies": [
            "module.ec2-module.data.template_file.userdata",
            "module.sg-module.aws_security_group.my_sg",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg-module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094175769936:security-group/sg-01cf1cb5eae2ac1a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cf1cb5eae2ac1a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "094175769936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-ec2"
            },
            "tags_all": {
              "Name": "sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db98171ccfc234fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gtway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094175769936:internet-gateway/igw-07741d208f0b49c55",
            "id": "igw-07741d208f0b49c55",
            "owner_id": "094175769936",
            "tags": {
              "Name": "my_gtway"
            },
            "tags_all": {
              "Name": "my_gtway"
            },
            "vpc_id": "vpc-0db98171ccfc234fb"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094175769936:route-table/rtb-0ebdaca2ebde67bce",
            "id": "rtb-0ebdaca2ebde67bce",
            "owner_id": "094175769936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07741d208f0b49c55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for IGW"
            },
            "tags_all": {
              "Name": "Route Table for IGW"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db98171ccfc234fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.my_gtway",
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d840143db7186eee",
            "route_table_id": "rtb-0ebdaca2ebde67bce",
            "subnet_id": "subnet-0bfc19509505d56e2"
          },
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.my_gtway",
            "module.vpc-module.aws_route_table.Public-Subnet-RT",
            "module.vpc-module.aws_subnet.public_subnet",
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094175769936:subnet/subnet-0bfc19509505d56e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfc19509505d56e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "094175769936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet1"
            },
            "tags_all": {
              "Name": "my-subnet1"
            },
            "vpc_id": "vpc-0db98171ccfc234fb"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094175769936:vpc/vpc-0db98171ccfc234fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ba77c2d453a60889",
            "default_route_table_id": "rtb-0023571997371b7b1",
            "default_security_group_id": "sg-0afb3871dbb734e85",
            "dhcp_options_id": "dopt-03dd82707dd7d7475",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db98171ccfc234fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0023571997371b7b1",
            "owner_id": "094175769936",
            "tags": {
              "Name": "vpc-ec2"
            },
            "tags_all": {
              "Name": "vpc-ec2"
            }
          }
        }
      ]
    }
  ]
}